--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ layout: default
         <!-- Profile Description -->
         <div id="profile_desc">
             <p>
-            	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac risus nibh. Donec adipiscing luctus tur
+           	major department of computer science in GWNU 
             </p>
             
         </div>
